progs/tests/ducktyping/simple_faulty.sy
A :: blob { a: int }
B :: blob { a: int, b: int }

f :: fn b: B -> int { ret b.b }

start :: fn {
	a :: A { a: 0 }
	f(a) <=> 0
}

// error: #ArgumentType(_, _, _)
// error: #TypeError(_, _)
